--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ p {
   align-content: start;
   padding: 30px;
   gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .footer {
@@ -237,4 +238,97 @@ p {
   text-align: center;
   padding: 8px;
   color: white;
+}
+
+@keyframes arrow {
+  from {
+    right: 30px;
+  } to {
+    right: 20px;
+  }
+}
+
+
+@media (max-width: 1200px) {
+  .grid-structure {
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+    grid-template-areas: 
+      "header header header"
+      "sidenav content content"
+      "sidenav ads ads"
+      "footer footer footer"
+    ;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-structure {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-areas: 
+      "header"
+      "sidenav"
+      "content"
+      "ads"
+      "footer"
+    ;
+  }
+
+  .header {
+    grid-template-columns: auto;
+  }
+
+  .logo {
+    margin-bottom: 20px;
+  }
+
+  .header nav a {
+    font-size: 1em;
+  }
+
+  .header li + li {
+    margin-left: 10px;
+  }
+
+  .sidenav {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+
+  .sidenav-wrapper {
+    position: relative;
+  }
+
+  .sidenav::after {
+    content: "→";
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    color: rgba(0,0,0, 0.3);
+    animation: arrow 700ms ease-in 0s infinite alternate;
+  }
+
+  .sidenav ul {
+    display: flex;
+  }
+
+  .sidenav ul li {
+    flex: 1 0 60px;
+  }
+
+  .sidenav {
+    padding: 0 30px;
+  }
+
+  .sidenav li a {
+    margin: 30px 30px 30px 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .content {
+    grid-template-columns: auto;
+  }
 }
